# budgeted-vickrey

./: .gitignore  LICENSE  README.md  pyproject.toml  references.bib  report.tex
behavioral_scientist/: README.md  all_apps_wide-2025-09-11.csv
behavioral_scientist/llm/: prompts.txt  settings.json  transcript.md
computational_scientist/: README.md  notebook.ipynb
data/: expected_profit_kappa_0p05.csv  expected_profit_kappa_0p099.csv  expected_profit_kappa_m0p05.csv  expected_profit_kappa_m0p099.csv  expected_profit_matrices.xlsx
economist/: README.md
economist/refs/: references.bib
results/: discrete_s1_T5.csv  episodes.csv  fast.csv  fast_discrete.csv  summary.csv
scripts/: make_expected_profit_matrices.py  plot_adjacent_advantage.py
src/budgeted_spa/: analysis.py  dynamics.py  io_utils.py  otree_ingest.py  params.py  plots.py  simulate.py  stage_game.py
src/budgeted_spa/tests/: test_core.py
